--- a/metadata/Makefile
+++ b/metadata/Makefile
@@ -1,4 +1,8 @@
-download_metadata:
+upload:
+	cp *.h5 /eos/home-l/lcoyle/obsbox_metadata/
+	cp no_data.json /eos/home-l/lcoyle/obsbox_metadata/
+
+download:
 	curl https://cernbox.cern.ch/index.php/s/o4kx7E6XTIdRbwE/download | tar -xz
 
-.PHONY: download_metadata
+.PHONY: download upload
